--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.2",
+    "axios": "^0.19.0",
+    "element-ui": "^2.12.0",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
