--- a/package.json
+++ b/package.json
@@ -43,8 +43,6 @@
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.7.3",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
@@ -53,7 +51,11 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "eventsource-polyfill": "^0.9.6",
+    "fs-extra": "^5.0.0",
+    "ts-loader": "^3.2.0",
+    "typescript": "^2.6.2"
   },
   "engines": {
     "node": ">= 6.0.0",
